--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "files": [
     "generators"
   ],
+  "dependencies": {
+    "chalk": "^1.0.0",
+    "wiredep": "^2.2.0",
+    "yeoman-generator": "^0.16.0",
+    "yosay": "^1.0.2"
+  },
   "main": "generators/index.js",
   "keywords": [
     "yeoman", "themonkeys", "monkeys", "yeoman-generator"
