Change homepage for Yeoman generators

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "generator-monkey-bones",
   "version": "0.1.0",
   "description": "The monkeys project generator.",
-  "homepage": "themonkeys.com",
+  "homepage": "https://github.com/TheMonkeys/generator-monkey-bones",
   "author": {
     "name": "Lachlan Tweedie",
     "email": "lachlant@themonkeys.com.au",
